# uchat

./: .env  .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  config.toml.example
client/: Cargo.toml
client/src/: client.rs  main.rs
client/uchat-android/: Cargo.toml  Trunk.toml
client/uchat-android/src-tauri/: Cargo.toml  tauri.conf.json
client/uchat-android/src-tauri/src/: main.rs
client/uchat-coreapi/: Cargo.toml
client/uchat-coreapi/src/: core_api.rs  lib.rs  main.rs  protocol.rs  utils.rs
client/uchat-desktop/: Cargo.toml  Trunk.toml  build.rs  package-lock.json  package.json
client/uchat-desktop/resources/: main.qml
client/uchat-desktop/src/: App.tsx  cxxqt_client.rs  main.rs
client/uchat-desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/uchat-desktop/src-tauri/src/: main.rs
client/uchat-desktop/src/components/: Sidebar.tsx
client/uchat-desktop/src/pages/: HomePage.tsx  LoginPage.tsx  MainPage.tsx  SignupPage.tsx
client/uchat-desktop/src/pages/home/: ChatWindow.tsx  FriendList.tsx  MessageList.tsx
client/uchat-desktop/src/styles/: App.css
client/uchat-desktop/src/styles/components/: Sidebar.css
client/uchat-desktop/src/styles/pages/: HomePage.css  MainPage.css
crate/uchat_model/: Cargo.toml
crate/uchat_model/src/: event.rs  frame.rs  lib.rs  message.rs  mod.rs  model.rs
crate/uchat_model/src/event/: mod.rs
crate/uchat_model/src/event/content/: mod.rs  private.rs  public.rs
crate/uchat_model/src/manager/: mod.rs  request_body.rs  response.rs
crate/uchat_model/src/request/: request_body.rs  response.rs
server/: Cargo.toml
server/src/: db.rs  error.rs  main.rs
server/src/api/: doc.rs  error.rs  manager.rs  mod.rs  request.rs  session_manager.rs
server/src/api/handler/: mod.rs
server/src/api/handler/authentication/: login.rs  logout.rs
server/src/api/handler/friend/: info_friend.rs
server/src/api/handler/group/: info_group.rs  join_group.rs  leave_group.rs  members_group.rs
server/src/api/handler/manager/: dashboard.rs  mod.rs
server/src/api/handler/manager/message/: mod.rs  privite.rs
server/src/api/handler/manager/online/: mod.rs  session.rs  tree.rs
server/src/api/handler/manager/user/: count.rs  delete.rs  detail.rs  friend.rs  list.rs  mod.rs  role.rs
server/src/api/handler/message/: group_message.rs  session_message.rs
server/src/api/handler/request/: mod.rs
server/src/api/handler/request/authentication/: login.rs  logout.rs  password.rs  register.rs  session.rs  ws_connect.rs
server/src/api/handler/request/friend/: add_friend.rs  info_friend.rs  list_friend.rs  mod.rs  status_friend.rs
server/src/api/handler/request/group/: creat_group.rs  info_group.rs  join_group.rs  leave_group.rs  list_group.rs  members_group.rs
server/src/api/handler/request/message/: group.rs  group_message.rs  private.rs  session_message.rs
server/src/api/handler/request/user/: avatar.rs  contact.rs  me.rs  mod.rs
server/src/api/handler/ws/: mod.rs
server/src/api/manager/: message.rs  mod.rs  session.rs  user.rs
server/src/api/request/: messages.rs  mod.rs  user.rs
server/src/db/: error.rs  factory.rs  messages.rs  mod.rs
server/src/db/mysql/: friend.rs  group.rs  manager.rs  message.rs  mod.rs  user.rs
server/src/db/postgresql/: manager.rs  message.rs  mod.rs  user.rs
server/src/handler/: mod.rs
server/src/handler/authentication/: login.rs  logout.rs  mod.rs  password.rs  register.rs  ws_connect.rs
server/src/handler/friend/: add_friend.rs  info_friend.rs  list_friend.rs  mod.rs
server/src/handler/group/: creat_group.rs  info_group.rs  join_group.rs  leave_group.rs  list_group.rs  members_group.rs  mod.rs
server/src/handler/message/: group_message.rs  mod.rs  session_message.rs
server/src/handler/ws/: mod.rs
server/src/protocol/: client.rs  frame.rs  manager.rs  message.rs  mod.rs  model.rs  server.rs
server/src/protocol/manager/: request_body.rs  response.rs
server/src/protocol/request/: mod.rs  request_body.rs  response.rs
server/src/redis/: mod.rs
server/src/server/: mod.rs
server/src/server/route/: authentication.rs  friend.rs  group.rs  manager.rs  message.rs  mod.rs  user.rs
server/src/server/route/manager/: message.rs  mod.rs  online.rs  user.rs
server/src/server/route/message/: group.rs  mod.rs  user.rs
server/src/session/: mod.rs  redis.rs
server/src/storage/: minio.rs  mod.rs
(+53 files in other folders)
