[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
reqwest = { version = "0.12.19", features = ["json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
url = "2.5.4"
