[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "tracing", "macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
headers = "0.4.1"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["mysql", "postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v7"] }

[features]
default = []
mysql = []
postgres = []