[package]
name = "uchat-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
uchat-coreapi = { path = "../uchat-coreapi" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
cxx-qt = "0.6"

[build-dependencies]
cxx-qt-build = "0.6"